[package]
name = "phips"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
crossterm = "0.18.2"
device_query = "0.1.0"
gilrs = "0.8.0"
